tests/fixtures/guardrails/invalid/webhook-exported-binding-inline-business-logic/app/routes/webhooks.app.uninstalled.ts
const action = async () => ({ topic: "app/uninstalled" }).topic.toUpperCase();

export { action };
